# quarto-parameterised-reports-test

./: .gitignore  Manifest.toml  README.md  _environment  _quarto-python-questions.yml  _quarto-python-solutions.yml  _quarto-questions.yml  _quarto.yml  _stata-code-test.html  _stata-code-test.qmd  child-doc-test.html  child-doc-test.qmd  contents-test-2.html  contents-test-2.qmd  contents-test.html  contents-test.qmd  discussion-12026-reply.html  discussion-12026-reply.qmd  embed-doc-test.html  embed-doc-test.qmd  exercise-julia-meta-questions.html  exercise-julia-meta-solutions.html  exercise-julia-meta.qmd  exercise-julia-questions.html  exercise-julia-solutions.html  exercise-julia.qmd  exercise-python-meta-2.qmd  exercise-python-meta-profile-questions.html  exercise-python-meta-profile-solutions.html  exercise-python-meta-profile.qmd  exercise-python-meta-questions-2.html  exercise-python-meta-questions.html  exercise-python-meta-solutions-2.html  exercise-python-meta-solutions.html  exercise-python-meta.qmd  exercise-python-questions.html  exercise-python-solutions.html  exercise-python.qmd  exercise-questions.html  exercise-r-2-questions.html  (+54 more)
docs/: index.html
